--- a/src/posts/published/use-encapsulation/index.mdx
+++ b/src/posts/published/use-encapsulation/index.mdx
@@ -1,10 +1,10 @@
 ---
-date: '2020-12-30'
+date: '2021-01-28'
 slug: 'use-encapsulation'
 title: 'useEncapsulation'
 subtitle: 'or Why Your React Components Should Only Use Custom Hooks'
-description: ''
-excerpt: null
+description: 'Improve the quality of your codebase with encapsulation and custom React hooks.'
+excerpt: "If you're using React Hooks, I want to show you a pattern for using them that I think will improve the legibility and organization of your codebase. Let's apply encapsulation to the use of React Hooks."
 tags: ['JavaScript', 'React', 'Computer Science']
 relatedPostsSlugs: ['encapsulation']
 ---
@@ -21,7 +21,7 @@ Before we get started, it will benefit you greatly if you read my post on [encap
 
 ### The Problem
 
-Given the nature of our work, that needs change frequently and therefore code changes frequently, too, it is not surprising that our codebases become messy. Our logic gets strewn about like tools left on a workbench. The problem is that hidden in the mess is important information that is getting lost. Important historical decisions left without explanation or context and more. I'll try to come up with a contrived example quickly.
+Given the nature of our work, that requirements change frequently and therefore code changes frequently, too, it is not surprising that our codebases become messy. Our logic gets strewn about like tools left on a workbench. The problem is that hidden in the mess of functions and objects is important information that is getting lost. Important historical decisions left without explanation or context and more. I'll try to come up with a contrived example quickly.
 
 Imagine we have a `Component` that can be toggled into two states: `off` and `on`. We'll use React Hooks to set this up.
 
@@ -118,15 +118,15 @@ function Component() {
 }
 ```
 
-Are you starting to see the problem I'm seeing? Even writing, what is in my opinion, very clean and clear code, we've started to create a **gap** between related implementation details.
+Are you starting to see the problem I'm seeing? Even though we wrote relatively clean and clear code, we have started to create a **gap** between related implementation details.
 
-We _need_ to call our hooks in the same order every render of `Component`. Those are the rules. To accomplish this, we've followed a common organizational pattern with our declarations of state near the top of our component and our various event handlers further down. But in following this pattern, we've separated the toggle state and its event handlers with the interruption of declaring another state. Even worse, our input state is separated from its related handlers by three unrelated function declarations. **Just imagine this in your codebase and I'm sure you've seen far worse!** This can quickly become a nightmare.
+We _need_ to call our hooks in the same order every render of `Component`. Those are the rules. To accomplish this, we've followed a common organizational pattern with our declarations of state near the top of our component and our various event handlers further down. But in following this pattern, we've separated the toggle state and its event handlers with the interruption of declaring another instance of `useState`. Even worse, our input state is separated from its related handlers by three unrelated function declarations. **Just imagine this in your codebase and I'm sure you've seen far worse!** This can quickly become a nightmare.
 
-There is, fortunately, a very simple solution: custom hooks.
+There is, fortunately, a very simple solution: **custom hooks**.
 
 ### Why Custom Hooks are the Solution
 
-A custom hook is a function and functions are structures we can use to encapsulate the related elements of a concern and expose an API to our function's consumer. In the case of our `Component`, these custom hooks are fairly simple to create.
+A custom hook is _just a function_ and functions are structures we can use to encapsulate the related elements of a concern and expose an API to our function's consumer. In the case of our `Component`, these custom hooks are fairly simple to create.
 
 ```jsx
 function useOnOff() {
@@ -164,6 +164,8 @@ function useInput() {
     }),
     []
   )
+
+  return [state, handlers]
 }
 
 function Component() {
@@ -201,10 +203,82 @@ function Component() {
 }
 ```
 
+Take notice, our `Component` now only consumes custom hooks. These custom hooks give us a little more context to what they mean, and we don't have the implementation details of our state handler functions sitting in the middle of our component function.
+
+Another benefit of this pattern is that dependencies quickly become obvious _because they end up being arguments to our custom hooks_. What if our `useInput` hook should begin with an initial state other than an empty string and we use that for resetting the input as well?
+
+```javascript
+function useInput(initialState = '') {
+  const [state, setState] = React.useState(initialState)
+
+  const handlers = React.useMemo(
+    () => ({
+      handleInputChange: e => {
+        setState(e.target.value)
+      },
+      resetInput: () => {
+        setState(initialState)
+      },
+    }),
+    [initialState]
+  )
+
+  return [state, handlers]
+}
+
+function Component({ startingWord }) {
+  //...
+  const [inputState, { handleInputChange, resetInput }] = useInput(startingWord)
+  //...
+}
+```
+
+There are even more benefits. By adding this layer of abstraction between our component and the standard React hooks, we can change the implementation of our custom hook's API without changing the component. Perhaps I want to use a reducer instead of `useState` for our `useOnOff` hook: <Marker content="I know this example is ridiculous. If I ever think of a better one, I'll update the post." />
+
+```javascript
+function onOffReducer(state, action) {
+  switch (action) {
+    case 'ON':
+      return 'on'
+    case 'OFF':
+      return 'off'
+    case 'TOGGLE':
+      return state === 'on' ? 'off' : 'on'
+    default:
+      return state
+  }
+}
+
+function useOnOff() {
+  const [state, dispatch] = React.useReducer(onOffReducer, 'off')
+
+  const handlers = React.useMemo(
+    () => ({
+      on: () => {
+        dispatch('ON')
+      },
+      off: () => {
+        dispatch('OFF')
+      },
+      toggle: () => {
+        dispatch('TOGGLE')
+      },
+    }),
+    []
+  )
+
+  return [state, handlers]
+}
+```
+
+Obviously, this type of change might be completely unnecessary for my example, but I hope you can recognize where this layer of abstraction might be useful to you when you have to change the implmentation details of a hook. We were able to replace the entire state management of our hook without changing the API, which means our component behaves the same way, even though the implementation of that behavior has changed quite a bit.
+
 ### How to Enforce this Pattern
 
-I wrote this eslint plugin: `eslint-plugin-prefer-custom-hooks`
+What good is a pattern if you can't come up with a way to get others to use it? To steer them down the good path? We can do that for this pattern with an ESLint plugin and rule. Thus, I give you the `prefer-custom-hooks` rule! You can find it here: [https://github.com/kyleshevlin/eslint-plugin](https://github.com/kyleshevlin/eslint-plugin).
+
+Following the installation instructions, you'll see that `prefer-custom-hooks` will warn you whenever you use a React hook directly inside a component. The only way around the warning (other than disabling the rule), is to use the React hooks from within a custom hook.
 
 ### Summary
 
-By opting to write all the hooks consumed by your components as custom ones, you will be providing future devs (including yourself) useful context by encapsulating all the pieces of a concern into a single function. By doing this, you gain all the benefits of proper encapsulation and make your components more declarative.
+By opting to write all the hooks consumed by your components as custom ones, you will be providing future devs (including yourself) useful context by encapsulating all the pieces of a concern into a single function. By doing this, you gain all the benefits of proper encapsulation and make your components more declarative. You might even gain a few useful reusable hooks in the process.
