Fix typo encapsulation
I spotted a typo so submitting a fix PR

--- a/src/posts/published/encapsulation/index.mdx
+++ b/src/posts/published/encapsulation/index.mdx
@@ -22,7 +22,7 @@ sayHello('Kyle') // Hello, Kyle
 sayHello('friend') // Hello, friend
 ```
 
-Now, you have a function you can _reuse_. Reusability was and is touted as the great benefit of functions. The primacy of this benefit is touted everywhere with lesson upon lesson on DRY code. <Marker content={`DRY stands for "don't repeat yourself".`} /> However, I will contend that reusability is **not** the primary purpose of a function. No, reusability is rather a wonderful property of functions that comes as the result of their true primary purpose: **enacapsulation**.
+Now, you have a function you can _reuse_. Reusability was and is touted as the great benefit of functions. The primacy of this benefit is touted everywhere with lesson upon lesson on DRY code. <Marker content={`DRY stands for "don't repeat yourself".`} /> However, I will contend that reusability is **not** the primary purpose of a function. No, reusability is rather a wonderful property of functions that comes as the result of their true primary purpose: **encapsulation**.
 
 ### What is &ldquo;encapsulation&rdquo;?
 
