--- a/src/posts/published/facade-pattern/index.mdx
+++ b/src/posts/published/facade-pattern/index.mdx
@@ -3,7 +3,7 @@ date: '2021-02-17'
 slug: 'facade-pattern'
 title: 'Facade Pattern'
 subtitle: 'or why this pattern might save your bacon '
-description: 'The Facade Pattern is when we wrap a library or object in our own function or class in order to hide the implementation details from the consumer. We can hide vast complexity and build in flexibility with this pattern.'
+description: 'Learn how the "facade pattern" can be used in JavaScript to make it easier to swap libraries, increase code flexibility, and hide complexity in your applications.'
 excerpt: 'With the facade pattern, we&apos;re able to hide details "under the hood", changing them when necessary without affecting the API exposed by the facade and consumed by the rest of your application.'
 tags: ['JavaScript', 'React', 'Computer Science', 'Software Engineering']
 relatedPostsSlugs: []
