fix all the tags

--- a/src/posts/published/adding-guards-to-our-use-reducer-fsm/index.mdx
+++ b/src/posts/published/adding-guards-to-our-use-reducer-fsm/index.mdx
@@ -5,7 +5,7 @@ title: 'Adding Guards to a `useReducer` Finite State Machine'
 subtitle: null
 description: ''
 excerpt: null
-tags: ['React', 'State Machines']
+tags: ['React', 'Hooks', 'State Machines']
 relatedPostsSlugs:
   [
     'how-to-use-usereducer-as-a-finite-state-machine',
