--- a/src/posts/published/bash-shortcut-how-to-make-directory-and-change-directory-in-one-command/index.mdx
+++ b/src/posts/published/bash-shortcut-how-to-make-directory-and-change-directory-in-one-command/index.mdx
@@ -2,6 +2,7 @@
 date: '2015-07-25'
 slug: 'bash-shortcut-how-to-make-directory-and-change-directory-in-one-command'
 title: 'Bash Shortcut: How to Make Directory and Change Directory in One Command'
+tags: ['Bash']
 ---
 
 If you're like me, you're constantly using the command line to make a directory and then immediately change to that directory. Here's a Bash function that will allows you to do that:
