--- a/src/posts/published/enumerate-dont-booleanate/index.mdx
+++ b/src/posts/published/enumerate-dont-booleanate/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['XState', 'React']
+tags: ['React', 'State Machines']
 date: '2020-01-25'
 slug: 'enumerate-dont-booleanate'
 title: "Enumerate, Don't Booleanate"
