--- a/src/posts/published/experiment-write-a-simple-state-machine-as-a-string/index.mdx
+++ b/src/posts/published/experiment-write-a-simple-state-machine-as-a-string/index.mdx
@@ -4,7 +4,7 @@ slug: 'can-a-state-machine-be-a-string'
 title: 'Can a State Machine be a String?'
 subtitle: 'A Superfluous Experiment in Brevity'
 description: 'In this blog post, Kyle Shevlin walks through an experiment in writing a state machine as a string of text following test driven development.'
-tags: ['React', 'XState', 'State Machines']
+tags: ['React', 'State Machines']
 relatedPostsSlugs:
   [
     'guidelines-for-state-machines-and-xstate',
