--- a/src/posts/published/from-pastor-to-programmer/index.mdx
+++ b/src/posts/published/from-pastor-to-programmer/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Life Story']
+tags: ['Thoughts']
 date: '2018-02-05'
 slug: 'from-pastor-to-programmer'
 subtitle: 'or Telling My Story Once and For All'
