--- a/src/posts/published/headlight-vision/index.mdx
+++ b/src/posts/published/headlight-vision/index.mdx
@@ -5,7 +5,7 @@ title: 'Headlight Vision'
 subtitle: 'or The Challenge of Only Driving at Night'
 description: "Do you ever feel like you're always stuck in someone else's rearview, failing to ever catch up to them? Might be time to change your persective."
 excerpt: null
-tags: []
+tags: ['Thoughts']
 relatedPostsSlugs: []
 ---
 
