--- a/src/posts/published/how-i-stumbled-upon-normalizing-redux-state/index.mdx
+++ b/src/posts/published/how-i-stumbled-upon-normalizing-redux-state/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Redux']
+tags: ['JavaScript', 'Redux']
 date: '2017-05-18'
 slug: 'how-i-stumbled-upon-normalizing-redux-state'
 subtitle: "and later learned it's a real thing"
@@ -25,18 +25,18 @@ const array = [
   {
     id: 1,
     title: 'Awesome Story',
-    content: 'This is a very awesome story'
+    content: 'This is a very awesome story',
   },
   {
     id: 2,
     title: 'Happy Story',
-    content: 'This is a happy story :)'
+    content: 'This is a happy story :)',
   },
   {
     id: 3,
     title: 'Sad Story',
-    content: 'This is a sad story :('
-  }
+    content: 'This is a sad story :(',
+  },
 ]
 
 // Turn into an object with .reduce()
@@ -75,7 +75,7 @@ const state = {
   },
   allStoryIds: [
     // an array of each id to use as keys for lookup
-  ]
+  ],
 }
 ```
 
