--- a/src/posts/published/how-to-write-your-own-javascript-dom-element-factory/index.mdx
+++ b/src/posts/published/how-to-write-your-own-javascript-dom-element-factory/index.mdx
@@ -3,6 +3,7 @@ date: '2017-07-12'
 slug: 'how-to-write-your-own-javascript-dom-element-factory'
 subtitle: 'A Basic HyperScript h() Function'
 title: 'How to Write Your Own JavaScript DOM Element Factory'
+tags: ['JavaScript']
 ---
 
 Recently at an interview I was asked to write a custom component from scratch with vanilla JavaScript. I thought I'd take a few minutes to write part of that code for you. It's not as scary as it might seem at first.
