--- a/src/posts/published/imagination/index.mdx
+++ b/src/posts/published/imagination/index.mdx
@@ -3,6 +3,7 @@ date: '2019-05-29'
 slug: 'a-plea-for-imagination'
 title: 'A Plea for Imagination'
 subtitle: 'aka Learn to Remix'
+tags: ['Thoughts']
 ---
 
 Some of you reading this know that I occasionally dust off the old microphone, fire up a text editor and make some educational material that I put on the interwebs. Mostly on [egghead](https:///?af=8u8eik). You might even be aware of this very blog post as a direct result of watching one of my lessons. If so, that's awesome and I thank you. But fair warning, not all students are the same, and I might be speaking directly to you in the next few paragraphs.
