--- a/src/posts/published/javascript-external-links-in-new-tabs/index.mdx
+++ b/src/posts/published/javascript-external-links-in-new-tabs/index.mdx
@@ -2,6 +2,7 @@
 date: '2016-03-26'
 slug: 'javascript-external-links-in-new-tabs'
 title: 'JavaScript: External Links in New Tabs'
+tags: ['JavaScript']
 ---
 
 I've written before about my not so mild hatred for the request to open all external links in new tabs. For those who don't know, this is done by adding `target="_blank"` to the anchor tag. I don't like doing this for so many reasons, but I'll save that rant for another blog post.
