--- a/src/posts/published/just-enough-fp-argument-order/index.mdx
+++ b/src/posts/published/just-enough-fp-argument-order/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Just Enough FP']
+tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-29'
 slug: 'just-enough-fp-argument-order'
 title: 'Just Enough FP: Argument Order'
