--- a/src/posts/published/just-enough-fp-partial-application/index.mdx
+++ b/src/posts/published/just-enough-fp-partial-application/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Just Enough FP']
+tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-27'
 slug: 'just-enough-fp-partial-application'
 title: 'Just Enough FP: Partial Application'
