--- a/src/posts/published/just-enough-fp-pointfree/index.mdx
+++ b/src/posts/published/just-enough-fp-pointfree/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Just Enough FP']
+tags: ['Functional Programming', 'JavaScript']
 date: '2019-05-01'
 description: 'Pointfree programming is a style of programming that favors passing the function itself as an argument rather than using lambda functions to operate on data. It focuses on the composition of functions rather than micro-managing your data.'
 slug: 'just-enough-fp-pointfree'
