--- a/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
+++ b/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Just Enough FP']
+tags: ['Functional Programming', 'JavaScript']
 date: '2019-03-22'
 slug: 'just-enough-functional-programming-course-launch'
 title: 'Just Enough Functional Programming Course Launch'
