--- a/src/posts/published/my-mock-interview-experience-with-rick-altherr-from-google/index.mdx
+++ b/src/posts/published/my-mock-interview-experience-with-rick-altherr-from-google/index.mdx
@@ -1,17 +1,40 @@
 ---
-date: "2017-07-03"
-slug: "my-mock-interview-experience-with-rick-altherr-from-google"
-subtitle: "or Practice Without the Pressure"
-title: "My Mock Interview Experience with Rick Altherr from Google"
+date: '2017-07-03'
+slug: 'my-mock-interview-experience-with-rick-altherr-from-google'
+subtitle: 'or Practice Without the Pressure'
+title: 'My Mock Interview Experience with Rick Altherr from Google'
+tags: ['Career']
 ---
 
 A few days ago, I came across a tweet by Stephanie Hurlbut, a software engineer and entrepreneur who uses her influence to help other engineers out. Allow me to share that tweet with you:
 
-<blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="en" dir="ltr">If you would be up for giving someone a mock typical whiteboard interview to help them pass those (Skype or in person), reply to this tweet.</p>— Stephanie Hurlburt (@sehurlburt) <a href="https://twitter.com/sehurlburt/status/872913584769990656">June 8, 2017</a></blockquote>
+<blockquote class="twitter-tweet" data-partner="tweetdeck">
+  <p lang="en" dir="ltr">
+    If you would be up for giving someone a mock typical whiteboard interview to
+    help them pass those (Skype or in person), reply to this tweet.
+  </p>
+  — Stephanie Hurlburt (@sehurlburt){' '}
+  <a href="https://twitter.com/sehurlburt/status/872913584769990656">
+    June 8, 2017
+  </a>
+</blockquote>
 
 I was really intrigued by this idea and was hoping someone would rise to the occasion. As it so happens, a few awesome people offered to give mock interviews. In particular, I came across Senior Software Engineer at Google Rick Altherr's offer.
 
-<blockquote class="twitter-tweet" data-conversation="none" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr">I'm waiting for my first taker</p>— Rick Altherr (@kc8apf) <a href="https://twitter.com/kc8apf/status/879533477854560257">June 27, 2017</a></blockquote>
+<blockquote
+  class="twitter-tweet"
+  data-conversation="none"
+  data-cards="hidden"
+  data-partner="tweetdeck"
+>
+  <p lang="en" dir="ltr">
+    I'm waiting for my first taker
+  </p>
+  — Rick Altherr (@kc8apf){' '}
+  <a href="https://twitter.com/kc8apf/status/879533477854560257">
+    June 27, 2017
+  </a>
+</blockquote>
 
 Well, as you can guess, I took Rick up on his offer and setup an interview with him.
 
