--- a/src/posts/published/not-all-just-javascript-is-the-same/index.mdx
+++ b/src/posts/published/not-all-just-javascript-is-the-same/index.mdx
@@ -1,8 +1,8 @@
 ---
-tags: ['Ember', 'React']
 date: '2017-09-07'
 slug: 'not-all-just-javascript-is-the-same'
-title: "Not All 'Just JavaScript' is the Same"
+title: 'Not All "Just JavaScript" is the Same'
+tags: ['Thoughts']
 ---
 
 I'm going to start this post with what will appear to be a tangent. I assure you, it's not.
