--- a/src/posts/published/shevyjs/index.mdx
+++ b/src/posts/published/shevyjs/index.mdx
@@ -1,7 +1,8 @@
 ---
-date: "2017-05-17"
-slug: "shevyjs"
-title: "ShevyJS"
+date: '2017-05-17'
+slug: 'shevyjs'
+title: 'ShevyJS'
+tags: ['JavaScript']
 ---
 
 This morning I released [ShevyJS](https://github.com/kyleshevlin/shevyjs) into the wild. ShevyJS is a remake of [Shevy](https://github.com/kyleshevlin/shevy) for CSS-in-JS styling.
