--- a/src/posts/published/small-gripe-target_blank/index.mdx
+++ b/src/posts/published/small-gripe-target_blank/index.mdx
@@ -2,6 +2,7 @@
 date: '2015-01-26'
 slug: 'small-gripe-target_blank'
 title: 'Small Gripe: Target="_blank"'
+tags: ['Thoughts']
 ---
 
 I'm often asked to make small, almost trivial changes to our clients' websites. One of these changes that grinds my gears is the frequent request to "Make this hyperlink open in a new tab/window."
