--- a/src/posts/published/the-importance-of-competing-thoughts/index.mdx
+++ b/src/posts/published/the-importance-of-competing-thoughts/index.mdx
@@ -1,7 +1,8 @@
 ---
-date: "2018-11-10"
-slug: "the-importance-of-competing-thoughts"
-title: "The Importance of Competing Thoughts"
+date: '2018-11-10'
+slug: 'the-importance-of-competing-thoughts'
+title: 'The Importance of Competing Thoughts'
+tags: ['Thoughts']
 ---
 
 Before I dive into this idea of mine, I want to tell you, I've been scared to write it out. It's been in my head for a few months, but I'm genuinely nervous to share it with others. I don't know how you're going to receive it. Hopefully well, because I'm going for it.
