--- a/src/posts/published/the-role-of-timing-in-a-job-hunt/index.mdx
+++ b/src/posts/published/the-role-of-timing-in-a-job-hunt/index.mdx
@@ -2,6 +2,7 @@
 date: '2018-10-10'
 slug: 'the-role-of-timing-in-a-job-hunt'
 title: 'The Role of Timing In a Job Hunt'
+tags: ['Career']
 ---
 
 In my [last blog post](https://kyleshevlin.com/how-to-be-more-successful-on-your-next-web-developer-job-hunt/), I shared with you several tips on how to make that hunt go better for you. We talked about how shifting our mindset to "seeking offers" instead of "getting a job" puts us in a position to "explore" rather than "judge". We need to explore many paths and options when trying to find the next step in our career. This week, I'm going to continue to discuss the job hunt by sharing an anecdote from this week and how that might relate to you.
