--- a/src/posts/published/using-and-and-or-in-bash-scripts/index.mdx
+++ b/src/posts/published/using-and-and-or-in-bash-scripts/index.mdx
@@ -2,7 +2,7 @@
 date: '2016-03-09'
 slug: 'using-and-and-or-in-bash-scripts'
 title: 'Using && and || in Bash Scripts'
-tags: ['Bash', 'Tips & Tricks']
+tags: ['Bash']
 ---
 
 I write about Bash so often you might start to think it's all I do. It's not, but considering I spend a good portion of my day in the terminal, I'm always on the look out for ways to make it a more efficient experience.
