--- a/src/posts/published/when-elses-make-your-code-worse/index.mdx
+++ b/src/posts/published/when-elses-make-your-code-worse/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Refactoring']
+tags: ['Refactoring', 'Software Engineering']
 date: '2019-07-17'
 slug: 'when-elses-make-your-code-worse'
 title: 'When `else`s Make Your Code Worse'
