--- a/src/posts/published/why-i-think-opening-external-links-in-new-tabs-is-a-bad-idea/index.mdx
+++ b/src/posts/published/why-i-think-opening-external-links-in-new-tabs-is-a-bad-idea/index.mdx
@@ -1,7 +1,8 @@
 ---
-date: "2016-03-27"
-slug: "why-i-think-opening-external-links-in-new-tabs-is-a-bad-idea"
-title: "Why I Think Opening External Links In New Tabs Is a Bad Idea"
+date: '2016-03-27'
+slug: 'why-i-think-opening-external-links-in-new-tabs-is-a-bad-idea'
+title: 'Why I Think Opening External Links In New Tabs Is a Bad Idea'
+tags: ['Thoughts']
 ---
 
 In previous posts I've mentioned my vehement dislike of purposefully opening links in a new tab. Here's a short list of reasons why it's a bad idea:
