--- a/src/posts/published/your-own-meetup/index.mdx
+++ b/src/posts/published/your-own-meetup/index.mdx
@@ -4,6 +4,7 @@ description: "People express FOMO regarding our regular gatherings for drinks an
 keywords: ['gathering', 'meetups', 'Portland']
 slug: 'your-own-gathering'
 title: 'Your Own Gathering'
+tags: ['Thoughts']
 ---
 
 A few months back, [Jason Lengstorf](https://twitter.com/jlengstorf) and I started a gathering for people in Portland to get together, relax, and get to know one another. Our biggest night so far had over 30 people crowding this cozy little backroom of a local bar. It was great.
