--- a/src/posts/published/zenos-paradox-of-infinite-loop-scrolling/index.mdx
+++ b/src/posts/published/zenos-paradox-of-infinite-loop-scrolling/index.mdx
@@ -3,6 +3,7 @@ date: '2017-02-17'
 slug: 'zenos-paradox-of-infinite-loop-scrolling'
 subtitle: 'or Everything Moves but You'
 title: "Zeno's Paradox of Infinite Loop Scrolling"
+tags: ['JavaScript']
 ---
 
 My current project has a strange requirement. Given a collection of items, a user should be able to infinitely loop scroll left and right in a carousel. From strictly a UI perspective, this makes sense, when I move to the left, add items to the right and vice versa. From a developer's perspective, this is kind of crazy.
