--- a/src/posts/published/how-to-use-usereducer-as-a-finite-state-machine/index.mdx
+++ b/src/posts/published/how-to-use-usereducer-as-a-finite-state-machine/index.mdx
@@ -3,7 +3,7 @@ date: '2020-05-04'
 slug: 'how-to-use-usereducer-as-a-finite-state-machine'
 title: 'How to Use `useReducer` as a Finite State Machine'
 description: "In this post, Kyle Shevlin demonstrates a way to make React's `useReducer` hook behave like a finite state machine."
-tags: ['React', 'State Machines']
+tags: ['React', 'Hooks', 'State Machines']
 relatedPostsSlugs:
   [
     'adding-guards-to-a-use-reducer-finite-state-machine',
