--- a/src/posts/published/just-enough-fp-currying/index.mdx
+++ b/src/posts/published/just-enough-fp-currying/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Just Enough FP']
+tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-26'
 slug: 'just-enough-fp-currying'
 title: 'Just Enough FP: Currying'
