--- a/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Just Enough FP']
+tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-08'
 slug: 'just-enough-fp-higher-order-functions'
 title: 'Just Enough FP: Higher Order Functions'
