--- a/src/posts/published/just-enough-fp-immutability/index.mdx
+++ b/src/posts/published/just-enough-fp-immutability/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Just Enough FP']
+tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-21'
 slug: 'just-enough-fp-immutability'
 title: 'Just Enough FP: Immutability'
