--- a/src/posts/published/just-enough-fp-pure-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-pure-functions/index.mdx
@@ -1,5 +1,5 @@
 ---
-tags: ['Just Enough FP']
+tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-14'
 slug: 'just-enough-fp-pure-functions'
 title: 'Just Enough FP: Pure Functions'
