add a few more snippets

--- a/src/snippets/compose-and-pipe.mdx
+++ b/src/snippets/compose-and-pipe.mdx
@@ -1,6 +1,6 @@
 ---
 name: 'compose() & pipe()'
-description: 'Functions for composing functions'
+description: 'Functions for composing other functions'
 category: 'JavaScript'
 slug: 'compose-and-pipe'
 ---
